--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.5.0",
     "fix-esm": "^1.0.1",
     "inquirer": "^12.0.1",
+    "jsdom": "^25.0.1",
     "ora": "^8.1.0",
     "pdfkit": "^0.15.0",
     "puppeteer": "^23.6.0",
